--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
     "mongoose": "^8.19.1",
+    "motion": "^12.23.24",
     "nanoid": "^5.1.6",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
