--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@studio-freight/lenis": "^1.0.42",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.6",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
